--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "ts-node",
     "start": "node .",
     "test": "jest",
-    "format": "prettier -w .",
+    "test:coverage": "jest --coverage",
     "lint": "prettier -c . && eslint . && tsc --noEmit",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "format": "prettier -w ."
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
@@ -21,6 +22,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-unused-imports": "^1.1.5",
     "husky": "^7.0.2",
     "jest": "^27.2.2",
     "prettier": "^2.3.2",
