--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,29 @@ on: pull_request
 
 jobs:
   test:
+    name: Test
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@v2
+      - name: Checkout repository
+        uses: actions/checkout@master
+
+      - name: Read node version from package.json
+        uses: culshaw/read-package-node-version-actions@v1
+        id: package-node-version
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: '>=16.6.0'
+          node-version: ${{ steps.package-version.outputs.version }}
           cache: 'yarn'
-      - run: yarn install
-      - run: yarn test
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Run test
+        run: yarn test:coverage
+
+      - name: Upload coverage
+        uses: codecov/codecov-action@v2
