--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
+  "engines": {
+    "node": "^16.6.0"
+  },
   "packageManager": "yarn"
 }
