--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-unused-imports": "^1.1.5",
     "husky": "^7.0.2",
     "jest": "^27.2.2",
+    "lint-staged": "^11.2.3",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
