--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         run: yarn install
 
       - name: Run test
-        run: yarn test:coverage
+        run: yarn test:coverage --passWithNoTests
 
       - name: Upload coverage
         uses: codecov/codecov-action@v2
