--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,21 +3,27 @@ env:
   es6: true
 
 extends:
-  - 'eslint:recommended'
-  - 'plugin:@typescript-eslint/recommended'
-  - 'plugin:import/recommended'
-  - 'plugin:import/typescript'
-  - 'prettier'
+  - eslint:recommended
+  - plugin:@typescript-eslint/recommended
+  - plugin:import/recommended
+  - plugin:import/typescript
+  - prettier
 
 plugins:
-  - 'unused-imports'
+  - unused-imports
+
+parser: '@typescript-eslint/parser'
+parserOptions:
+  ecmaFeatures:
+    jsx: true
+  project: ./tsconfig.eslint.json
 
 rules:
   import/order:
     - 2
     - alphabetize:
-        order: 'asc'
+        order: asc
+  '@typescript-eslint/consistent-type-imports': error
 
 settings:
-  import/resolver:
-    typescript: ''
+  import/resolver: typescript
