--- a/.lintstagedrc.yml
+++ b/.lintstagedrc.yml
@@ -1,1 +1,2 @@
-'*.{js,ts,jsx,tsx,json}': ['npx eslint --fix', 'npx prettier --write']
+'*.{js,ts,jsx,tsx}': ['npx eslint --fix']
+'*.{js,ts,jsx,tsx,json}': ['npx prettier --write']
