--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "main": "dist/index.js",
-  "license": "MIT",
+  "name": "typescript-template",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "prepare": "husky install",
     "build": "tsc",
@@ -8,9 +9,10 @@
     "start": "node .",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "prettier -c . && eslint . && tsc --noEmit",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier -w ."
+    "lint": "eslint src/**/*.{ts,tsx} && tsc --noEmit",
+    "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
@@ -32,7 +34,7 @@
     "typescript": "^4.6.3"
   },
   "engines": {
-    "node": "^16.14.0"
+    "node": "^14.x"
   },
-  "packageManager": "yarn@1.22.18"
+  "packageManager": "yarn@3.2.0"
 }
