--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
+    "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
   "packageManager": "yarn@3.4.1"
