chore: スタイル設定を変更

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -34,3 +34,9 @@ rules:
 
 settings:
   import/resolver: typescript
+
+overrides:
+  - files:
+      - '*.js'
+    parserOptions:
+      project: null
