--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.json",
-  "includes": ["src/**/*.{ts,tsx}"],
-  "exclude": ["node_modules", "dist"]
+	"extends": "./tsconfig.json",
+	"include": ["**/*.ts", "**/*.tsx"],
+	"exclude": ["node_modules", "dist"]
 }
