--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,19 +13,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout master
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+			- uses: pnpm/action-setup@v2
+
+    	- uses: actions/setup-node@v3
         with:
-          cache: 'yarn'
+          cache: 'pnpm'
 
-      - name: Install dependencies
-        run: yarn install
+			-	run: pnpm install --frozen-lockfile
 
       - name: Run lint
-        run: yarn lint
+        run: pnpm lint
 
   test:
     name: Test
@@ -33,19 +32,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+			- uses: pnpm/action-setup@v2
+
+    	- uses: actions/setup-node@v3
         with:
-          cache: 'yarn'
+          cache: 'pnpm'
 
-      - name: Install dependencies
-        run: yarn install
+			-	run: pnpm install --frozen-lockfile
 
       - name: Run test
-        run: yarn test:coverage --passWithNoTests
+        run: pnpm run test:coverage --passWithNoTests
 
       - name: Upload coverage
         uses: codecov/codecov-action@v2
