--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"prepare": "husky install",
 		"build": "tsc",
-		"dev": "ts-node",
+		"dev": "tsx",
 		"start": "node .",
 		"test": "jest",
 		"test:coverage": "jest --coverage",
@@ -18,20 +18,20 @@
 		"@commitlint/cli": "^17.4.4",
 		"@commitlint/config-conventional": "^17.4.4",
 		"@types/jest": "^29.4.0",
-		"@types/node": "^18.14.2",
-		"@typescript-eslint/eslint-plugin": "^5.54.0",
-		"@typescript-eslint/parser": "^5.54.0",
+		"@types/node": "^18.14.6",
+		"@typescript-eslint/eslint-plugin": "^5.54.1",
+		"@typescript-eslint/parser": "^5.54.1",
 		"eslint": "^8.35.0",
-		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-prettier": "^8.7.0",
 		"eslint-import-resolver-typescript": "^3.5.3",
 		"eslint-plugin-import": "^2.27.5",
 		"husky": "^8.0.3",
-		"jest": "^29.4.3",
+		"jest": "^29.5.0",
 		"lint-staged": "^13.1.2",
 		"prettier": "^2.8.4",
 		"ts-jest": "^29.0.5",
 		"tsx": "^3.12.3",
 		"typescript": "^4.9.5"
 	},
-	"packageManager": "yarn@3.4.1"
+	"packageManager": "pnpm@7.29.0"
 }
