--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-			- uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v2
 
-    	- uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           cache: 'pnpm'
 
-			-	run: pnpm install --frozen-lockfile
+      - run: pnpm install --frozen-lockfile
 
       - name: Run lint
         run: pnpm lint
@@ -32,15 +32,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-			- uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v2
 
-    	- uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           cache: 'pnpm'
 
-			-	run: pnpm install --frozen-lockfile
+      - run: pnpm install --frozen-lockfile
 
       - name: Run test
         run: pnpm run test:coverage --passWithNoTests
